--- a/main.html
+++ b/main.html
@@ -15,81 +15,86 @@
   </head>
 
   <body>
-    <!--Header-->
+    <!--Header-wrap-->
 
-    <div class="header">
-      <div class="container">
-        <div class="header__inner">
-          <div class="header__menu">
-            <a href="#" class="header__logo">
-              <img src="images/header_logo.svg" alt="header_logo" />
-              <span>Workito</span>
-            </a>
+    <div class="header-wrap">
 
-            <div class="header__block">
-              <div class="header__nav">
+      <!--Header-->
+      <header class="header">
+        <div class="container">
+          <div class="header__inner">
+            <div class="header__menu">
+              <a href="#" class="header__logo">
+                <img src="images/header_logo.svg" alt="header_logo" />
+                <span class="header__name-pc">Workito</span>
+                <span class="header__name-mobi">Jobscanner</span>
+              </a>
+
+              <div class="header__block">
+                <div class="header__nav">
+                  <ul class="header__list">
+                    <li class="header__link">
+                      <a href="#">для исполнителей</a>
+                    </li>
+                    <li class="header__link">
+                      <a href="#">для работодателей</a>
+                    </li>
+                    <li class="header__link">
+                      <a href="#">Предложения работы</a>
+                    </li>
+                    <li class="header__link">
+                      <a href="#">F&Q</a>
+                    </li>
+                  </ul>
+                </div>
+
+                <div class="header__user">
+                  <div class="header__entrance">
+                    <a href="#">Войти</a>
+                  </div>
+                  <div class="header__registration">
+                    <a href="#">Регистрация</a>
+                  </div>
+                </div>
+              </div>
+            </div>
+
+            <div class="header__navigation">
+              <div class="header__burger">
+                <span></span>
+              </div>
+
+              <div class="header__mobile">
                 <ul class="header__list">
                   <li class="header__link">
-                    <a href="#">для исполнителей</a>
+                    <a href="#">ДЛЯ ИСПОЛНИТЕЛЕЙ</a>
                   </li>
                   <li class="header__link">
-                    <a href="#">для работодателей</a>
+                    <a href="#">ДЛЯ РАБОТОДАТЕЛЕЙ</a>
                   </li>
                   <li class="header__link">
-                    <a href="#">Предложения работы</a>
+                    <a href="#">ПРЕДЛОЖЕНИЯ РАБОТЫ</a>
+                  </li>
+                  <li class="header__link">
+                    <a href="#">Контакты</a>
                   </li>
                   <li class="header__link">
                     <a href="#">F&Q</a>
                   </li>
                 </ul>
-              </div>
-
-              <div class="header__user">
-                <div class="header__entrance">
-                  <a href="#">Войти</a>
-                </div>
-                <div class="header__registration">
-                  <a href="#">Регистрация</a>
-                </div>
-              </div>
-            </div>
-          </div>
-
-          <div class="header__navigation">
-            <div class="header__burger">
-              <span></span>
-            </div>
-
-            <div class="header__mobile">
-              <ul class="header__list">
-                <li class="header__link">
-                  <a href="#">ДЛЯ ИСПОЛНИТЕЛЕЙ</a>
-                </li>
-                <li class="header__link">
-                  <a href="#">ДЛЯ РАБОТОДАТЕЛЕЙ</a>
-                </li>
-                <li class="header__link">
-                  <a href="#">ПРЕДЛОЖЕНИЯ РАБОТЫ</a>
-                </li>
-                <li class="header__link">
-                  <a href="#">Контакты</a>
-                </li>
-                <li class="header__link">
-                  <a href="#">F&Q</a>
-                </li>
-              </ul>
-              <div class="header__user">
-                <div class="header__entrance">
-                  <a href="#">вход</a>
-                </div>
-                <div class="header__registration">
-                  <a href="#">Регистрация</a>
+                <div class="header__user">
+                  <div class="header__entrance">
+                    <a href="#">вход</a>
+                  </div>
+                  <div class="header__registration button_transparent_green">
+                    <a href="#">Регистрация</a>
+                  </div>
                 </div>
               </div>
             </div>
           </div>
         </div>
-      </div>
+      </header>
     </div>
 
     <script src="./libs/jquery/jquery-3.2.1.min.js"></script>
