--- a/main.html
+++ b/main.html
@@ -95,6 +95,33 @@
           </div>
         </div>
       </header>
+
+      <div class="main">
+        <div class="container">
+          <div class="main__inner">
+            <div class="main__item">
+              <div class="main__images">
+                <img src="images/main_employee .png" alt="employee">
+              </div>
+              <a href="#" class="main__button btn btn-green">
+                Ищу работу
+              </a>
+            </div>
+            <div class="main__logo">
+              <img src="images/main_logo.svg" alt="logo">
+            </div>
+            <div class="main__item">
+              <div class="main__images">
+                <img src="images/main_employer.png" alt="employer">
+              </div>
+              <a href="#" class="main__button btn btn-blue">
+                Ищу персонал
+              </a>
+            </div>
+          
+          </div>
+        </div>
+      </div>
     </div>
 
     <script src="./libs/jquery/jquery-3.2.1.min.js"></script>
