--- a/main.html
+++ b/main.html
@@ -18,7 +18,6 @@
     <!--Header-wrap-->
 
     <div class="header-wrap">
-
       <!--Header-->
       <header class="header">
         <div class="container">
@@ -101,24 +100,108 @@
           <div class="main__inner">
             <div class="main__item">
               <div class="main__images">
-                <img src="images/main_employee .png" alt="employee">
+                <img src="images/main_employee .png" class="pc" alt="employee" />
+                <img src="images/main_employee-mobi .png" class="mobi" alt="employee" />
               </div>
               <a href="#" class="main__button btn btn-green">
-                Ищу работу
+                <span class="pc"> Ищу работу</span>
+                <span class="mobi"> я исполнитель</span>
               </a>
             </div>
             <div class="main__logo">
-              <img src="images/main_logo.svg" alt="logo">
+              <img src="images/main_logo.svg" alt="logo" />
             </div>
             <div class="main__item">
               <div class="main__images">
-                <img src="images/main_employer.png" alt="employer">
+                <img src="images/main_employer.png" class="pc" alt="employer" />
+                <img src="images/main_employer-mobi.png" class="mobi" alt="employer" />
               </div>
               <a href="#" class="main__button btn btn-blue">
-                Ищу персонал
+                <span class="pc"> Ищу персонал</span>
+                <span class="mobi"> я работодатель</span>
               </a>
             </div>
-          
+          </div>
+        </div>
+      </div>
+    </div>
+    
+    <div class="bg bg-1"></div>
+
+    <!-- Main-pc -->
+    <div class="main-pc">
+      <!--Search-->
+      <div class="search">
+        <div class="container">
+          <div class="search__inner">
+            <div class="search__contant">
+              <h2 class="search__title">
+                Платформа для поиска ответственных сотрудников и надежных работодателей
+              </h2>
+              <div class="search__text">
+                <p>
+                  Позвольте временным исполнителям выполнить работу эффективно и в нужное вам время!
+                </p>
+                <p>Создавайте гибкие смены и экономьте на простое постоянного персонала!</p>
+              </div>
+            </div>
+
+            <div class="search__images">
+              <img src="images/arms_round.png" class="pc" alt="foto" />
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <!-- Solutions -->
+      <div class="solutions">
+        <div class="container">
+          <div class="solutions__inner">
+            <h2 class="solutions__title">
+              Трудные времена требуют простых решений!
+            </h2>
+            <div class="solutions__items">
+
+              <div class="solutions__item">
+                <div class="solutions__image">
+                  <img src="images/solutions_1.png" alt="img">
+                </div>
+                <div class="solutions__text">
+                  Помощь с нагрузкой <span></span>
+                  в час пик
+                </div>
+              </div>
+
+              <div class="solutions__item">
+                <div class="solutions__image">
+                  <img src="images/solutions_2.png" alt="img">
+                </div>
+                <div class="solutions__text">
+                  1 час в день экономит до <span></span>
+                  7000 рублей в месяц
+                </div>
+              </div>
+
+              <div class="solutions__item">
+                <div class="solutions__image">
+                  <img src="images/solutions_3.png" alt="img">
+                </div>
+                <div class="solutions__text">
+                  Работа в любом месте в <span></span>
+                  любое время
+                </div>
+              </div>
+
+              <div class="solutions__item">
+                <div class="solutions__image">
+                  <img src="images/solutions_4.png" alt="img">
+                </div>
+                <div class="solutions__text">
+                  Подробные резюме <span></span>
+                  компаний и исполнителей
+                </div>
+              </div>
+            </div>
           </div>
         </div>
       </div>
