--- a/main.html
+++ b/main.html
@@ -15,127 +15,126 @@
   </head>
 
   <body>
-    <!--Header-wrap-->
+    <div class="wrapper">
 
-    <div class="header-wrap">
-      <!--Header-->
-      <header class="header">
-        <div class="container">
-          <div class="header__inner">
-            <div class="header__menu">
-              <a href="#" class="header__logo">
-                <img src="images/header_logo.svg" alt="header_logo" />
-                <span class="header__name-pc">Workito</span>
-                <span class="header__name-mobi">Jobscanner</span>
-              </a>
+      <!--Header-wrap-->
+      <div class="header-wrap">
+        <!--Header-->
+        <header class="header">
+          <div class="container">
+            <div class="header__inner">
+              <div class="header__menu">
+                <a href="#" class="header__logo">
+                  <img src="images/header_logo.svg" alt="header_logo" />
+                  <span class="header__name-pc">Workito</span>
+                  <span class="header__name-mobi">Jobscanner</span>
+                </a>
 
-              <div class="header__block">
-                <div class="header__nav">
+                <div class="header__block">
+                  <div class="header__nav">
+                    <ul class="header__list">
+                      <li class="header__link">
+                        <a href="#">для исполнителей</a>
+                      </li>
+                      <li class="header__link">
+                        <a href="#">для работодателей</a>
+                      </li>
+                      <li class="header__link">
+                        <a href="#">Предложения работы</a>
+                      </li>
+                      <li class="header__link">
+                        <a href="#">F&Q</a>
+                      </li>
+                    </ul>
+                  </div>
+
+                  <div class="header__user">
+                    <div class="header__entrance">
+                      <a href="#">Войти</a>
+                    </div>
+                    <div class="header__registration">
+                      <a href="#">Регистрация</a>
+                    </div>
+                  </div>
+                </div>
+              </div>
+
+              <div class="header__navigation">
+                <div class="header__burger">
+                  <span></span>
+                </div>
+
+                <div class="header__mobile">
                   <ul class="header__list">
                     <li class="header__link">
-                      <a href="#">для исполнителей</a>
+                      <a href="#">ДЛЯ ИСПОЛНИТЕЛЕЙ</a>
                     </li>
                     <li class="header__link">
-                      <a href="#">для работодателей</a>
+                      <a href="#">ДЛЯ РАБОТОДАТЕЛЕЙ</a>
                     </li>
                     <li class="header__link">
-                      <a href="#">Предложения работы</a>
+                      <a href="#">ПРЕДЛОЖЕНИЯ РАБОТЫ</a>
+                    </li>
+                    <li class="header__link">
+                      <a href="#">Контакты</a>
                     </li>
                     <li class="header__link">
                       <a href="#">F&Q</a>
                     </li>
                   </ul>
-                </div>
-
-                <div class="header__user">
-                  <div class="header__entrance">
-                    <a href="#">Войти</a>
-                  </div>
-                  <div class="header__registration">
-                    <a href="#">Регистрация</a>
-                  </div>
-                </div>
-              </div>
-            </div>
-
-            <div class="header__navigation">
-              <div class="header__burger">
-                <span></span>
-              </div>
-
-              <div class="header__mobile">
-                <ul class="header__list">
-                  <li class="header__link">
-                    <a href="#">ДЛЯ ИСПОЛНИТЕЛЕЙ</a>
-                  </li>
-                  <li class="header__link">
-                    <a href="#">ДЛЯ РАБОТОДАТЕЛЕЙ</a>
-                  </li>
-                  <li class="header__link">
-                    <a href="#">ПРЕДЛОЖЕНИЯ РАБОТЫ</a>
-                  </li>
-                  <li class="header__link">
-                    <a href="#">Контакты</a>
-                  </li>
-                  <li class="header__link">
-                    <a href="#">F&Q</a>
-                  </li>
-                </ul>
-                <div class="header__user">
-                  <div class="header__entrance">
-                    <a href="#">вход</a>
-                  </div>
-                  <div class="header__registration button_transparent_green">
-                    <a href="#">Регистрация</a>
+                  <div class="header__user">
+                    <div class="header__entrance">
+                      <a href="#">вход</a>
+                    </div>
+                    <div class="header__registration button_transparent_green">
+                      <a href="#">Регистрация</a>
+                    </div>
                   </div>
                 </div>
               </div>
             </div>
           </div>
-        </div>
-      </header>
+        </header>
 
-      <div class="main">
-        <div class="container">
-          <div class="main__inner">
-            <div class="main__item">
-              <div class="main__images">
-                <img src="images/main_employee .png" class="pc" alt="employee" />
-                <img src="images/main_employee-mobi .png" class="mobi" alt="employee" />
+        <div class="main">
+          <div class="container">
+            <div class="main__inner">
+              <div class="main__item">
+                <div class="main__images">
+                  <img src="images/main_employee .png" class="pc" alt="employee" />
+                  <img src="images/main_employee-mobi .png" class="mobi" alt="employee" />
+                </div>
+                <a href="#" class="main__button btn btn-green">
+                  <span class="pc"> Ищу работу</span>
+                  <span class="mobi"> я исполнитель</span>
+                </a>
               </div>
-              <a href="#" class="main__button btn btn-green">
-                <span class="pc"> Ищу работу</span>
-                <span class="mobi"> я исполнитель</span>
-              </a>
-            </div>
-            <div class="main__logo">
-              <img src="images/main_logo.svg" alt="logo" />
-            </div>
-            <div class="main__item">
-              <div class="main__images">
-                <img src="images/main_employer.png" class="pc" alt="employer" />
-                <img src="images/main_employer-mobi.png" class="mobi" alt="employer" />
+              <div class="main__logo">
+                <img src="images/main_logo.svg" alt="logo" />
               </div>
-              <a href="#" class="main__button btn btn-blue">
-                <span class="pc"> Ищу персонал</span>
-                <span class="mobi"> я работодатель</span>
-              </a>
+              <div class="main__item">
+                <div class="main__images">
+                  <img src="images/main_employer.png" class="pc" alt="employer" />
+                  <img src="images/main_employer-mobi.png" class="mobi" alt="employer" />
+                </div>
+                <a href="#" class="main__button btn btn-blue">
+                  <span class="pc"> Ищу персонал</span>
+                  <span class="mobi"> я работодатель</span>
+                </a>
+              </div>
             </div>
           </div>
         </div>
       </div>
-    </div>
-    
-    <div class="bg bg-1"></div>
 
-    <!-- Main-pc -->
-    <div class="main-pc">
-      <!--Search-->
-      <div class="search">
+      <div class="bg bg-1"></div>
+
+      <!--Search-pc-->
+      <div class="search search-pc">
         <div class="container">
           <div class="search__inner">
             <div class="search__contant">
-              <h2 class="search__title">
+              <h2 class="search__title title">
                 Платформа для поиска ответственных сотрудников и надежных работодателей
               </h2>
               <div class="search__text">
@@ -153,18 +152,61 @@
         </div>
       </div>
 
+      <!-- Search-mobile -->
+      <div class="search-mobile">
+        <div class="search-mobile__inner">
+
+          <div class="search-mobile__item">
+            <h2 class="search-mobile__title">
+              Ищу <br> работу
+            </h2>
+            <div class="search-mobile__subtitle">
+              СРОЧНО НУЖНА РАБОТА?
+            </div>
+            <div class="search-mobile__images">
+              <img src="images/money.png" alt="">
+            </div>
+            <div class="search-mobile__text">
+              Работайте в свободном графике!
+              Workito поможет Вам с этим.
+            </div>
+            <a href="#" class="search-mobile__button btn green">
+              <span><img src="images/gear.png" alt=""></span>
+              ЗАРЕГИСТРИРОВАТЬСЯ
+            </a>
+          </div>
+
+          <div class="search-mobile__item">
+            <h2 class="search-mobile__title">
+              Ищу <br> исполнителя
+            </h2>
+            <div class="search-mobile__subtitle">
+              НУЖЕН РАБОТНИК СО СВОБОДНЫМ ГРАФИКОМ?
+            </div>
+            <div class="search-mobile__images">
+              <img src="images/handshake.png" alt="">
+            </div>
+            <div class="search-mobile__text">
+              Подберите сотрудника по любой специальности и в то время, в которое Вам будет необходимо!
+            </div>
+            <a href="#" class="search-mobile__button btn blue">
+              <span><img src="images/gear.png" alt=""></span>
+              ЗАРЕГИСТРИРОВАТЬСЯ
+            </a>
+          </div>
+
+        </div>
+      </div>
+
       <!-- Solutions -->
-      <div class="solutions">
+      <div class="solutions solutions-pc">
         <div class="container">
           <div class="solutions__inner">
-            <h2 class="solutions__title">
-              Трудные времена требуют простых решений!
-            </h2>
+            <h2 class="solutions__title title">Трудные времена требуют простых решений!</h2>
             <div class="solutions__items">
-
               <div class="solutions__item">
                 <div class="solutions__image">
-                  <img src="images/solutions_1.png" alt="img">
+                  <img src="images/solutions_1.png" alt="img" />
                 </div>
                 <div class="solutions__text">
                   Помощь с нагрузкой <span></span>
@@ -174,7 +216,7 @@
 
               <div class="solutions__item">
                 <div class="solutions__image">
-                  <img src="images/solutions_2.png" alt="img">
+                  <img src="images/solutions_2.png" alt="img" />
                 </div>
                 <div class="solutions__text">
                   1 час в день экономит до <span></span>
@@ -184,7 +226,7 @@
 
               <div class="solutions__item">
                 <div class="solutions__image">
-                  <img src="images/solutions_3.png" alt="img">
+                  <img src="images/solutions_3.png" alt="img" />
                 </div>
                 <div class="solutions__text">
                   Работа в любом месте в <span></span>
@@ -194,7 +236,7 @@
 
               <div class="solutions__item">
                 <div class="solutions__image">
-                  <img src="images/solutions_4.png" alt="img">
+                  <img src="images/solutions_4.png" alt="img" />
                 </div>
                 <div class="solutions__text">
                   Подробные резюме <span></span>
@@ -205,6 +247,180 @@
           </div>
         </div>
       </div>
+
+      <div class="bg bg-2"></div>
+
+      <!-- Employer card -->
+      <div class="employer-card">
+        <div class="container">
+          <div class="employer-card__inner">
+            <div class="employer-card__item">
+
+              <!-- card-work -->
+              <div class="card-work mb-20">
+                <div class="card-work__inner">
+                  <div class="card-work__images">
+                    <img src="images/icon-waiter.png" alt="icon">
+                  </div>
+
+                  <div class="card-work__content">
+                    <div class="card-work__profession">
+                      Бармен
+                    </div>
+
+                    <div class="card-work__name">
+                      “Pizza.ru”
+                      <span>
+                        <img src="images/star.svg" alt="icon">
+                        4.45
+                      </span>
+                    </div>
+
+                    <div class="card-work__info">
+                      <div class="card-work__date card-work-img">
+                        <img src="images/calendar.svg" alt="icon">
+                        18.1. (среда)
+                      </div>
+
+                      <div class="card-work__time card-work-img">
+                        <img src="images/time.svg" alt="icon">
+                        15:00 - 20:00
+                      </div>
+
+                      <div class="card-work__place card-work-img">
+                        <img src="images/place.svg" alt="icon">
+                        ул. Снежиной, 107
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+
+              <!-- card-work -->
+              <div class="card-work mb-20">
+                <div class="card-work__inner">
+                  <div class="card-work__images">
+                    <img src="images/icon-waiter-pizza.png" alt="icon">
+                  </div>
+
+                  <div class="card-work__content">
+                    <div class="card-work__profession">
+                      Бармен
+                    </div>
+
+                    <div class="card-work__name">
+                      “Pizza.ru”
+                      <span>
+                        <img src="images/star.svg" alt="icon">
+                        4.45
+                      </span>
+                    </div>
+
+                    <div class="card-work__info">
+                      <div class="card-work__date card-work-img">
+                        <img src="images/calendar.svg" alt="icon">
+                        19.1. (четверг)
+                      </div>
+
+                      <div class="card-work__time card-work-img">
+                        <img src="images/time.svg" alt="icon">
+                        15:00 - 20:00
+                      </div>
+
+                      <div class="card-work__place card-work-img">
+                        <img src="images/place.svg" alt="icon">
+                        пл. Мира, 17
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+
+              <!-- card-work -->
+              <div class="card-work mb-20">
+                <div class="card-work__inner">
+                  <div class="card-work__images">
+                    <img src="images/icon-waiter-cardigan.png" alt="icon">
+                  </div>
+
+                  <div class="card-work__content">
+                    <div class="card-work__profession">
+                      Повар
+                    </div>
+
+                    <div class="card-work__name">
+                      “Кардиган”
+                      <span>
+                        <img src="images/star.svg" alt="icon">
+                        4.45
+                      </span>
+                    </div>
+
+                    <div class="card-work__info">
+                      <div class="card-work__date card-work-img">
+                        <img src="images/calendar.svg" alt="icon">
+                        20.1. (пятница)
+                      </div>
+
+                      <div class="card-work__time card-work-img">
+                        <img src="images/time.svg" alt="icon">
+                        11:00 - 16:00
+                      </div>
+
+                      <div class="card-work__place card-work-img">
+                        <img src="images/place.svg" alt="icon">
+                        ул. Ленина, 5
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+
+            </div>
+
+            <div class="employer-card__content">
+              <h2 class="employer-card__title">
+                Работа в удобное время в <span></span> удобном месте
+              </h2>
+              <div class="employer-card__text">
+                <p>
+                  Выберите в <a href="#">списке смен</a> или на карте наилучшее предложение работы! 
+                </p>
+                <p>
+                  Можно легко подстроится под собственный график, выбрать подходящую подработку недалеко от дома или постоянного места работы.
+                </p>
+              </div>
+            </div>
+          
+          </div>
+        </div>
+      </div>
+
+      <!-- Сhoice  -->
+      <div class="choice choice-pc">
+        <div class="container">
+          <div class="choice__inner">
+            <div class="choice__content">
+              <h2 class="choice__title title">
+                Выбор исполнителя за пару минут 
+              </h2>
+              <div class="choice__text">
+                <p>
+                  Создайте гибкую смену - опишите задачу для исполнителя, во сколько он должен прийти и куда. 
+                </p>
+                <p>
+                  Вам придут отклики, и вы сможете выбрать своего помощника для предстоящей работы! 
+                </p>
+              </div>
+            </div>
+
+            <div class="choice__images">
+              <img src="images/Girl and boy.png" alt="">
+            </div>
+          </div>
+        </div>
+      </div>
+
     </div>
 
     <script src="./libs/jquery/jquery-3.2.1.min.js"></script>
