--- a/main.html
+++ b/main.html
@@ -243,7 +243,7 @@
         </div>
       </div>
 
-      <div class="bg bg-2"></div>
+      <div class="bg bg-employer-card"></div>
 
       <!-- Employer card -->
       <div class="employer-card">
@@ -415,7 +415,7 @@
           </div>
         </div>
       </div>
-      <div class="bg bg1"></div>
+      <div class="bg bg-about"></div>
 
       <!-- About -->
       <div class="about">
@@ -640,7 +640,7 @@
         </div>
       </div>
 
-      <div class="bg1 bg-4"></div>
+      <div class="bg1 bg-view-offers"></div>
 
       <!-- View offers -->
       <div class="view-offers">
@@ -770,6 +770,74 @@
                 Таким способом увеличивается шанс, что ваше объявление будет рассмотрено, и вы
                 сможете выбрать наиболее подходящего сотрудника!
               </div>
+            </div>
+          </div>
+        </div>
+      </div>
+      
+      <div class="bg1 bg-information"></div>
+      <!-- Information -->
+      <div class="information">
+        <div class="container">
+          <div class="information__inner">
+            <div class="information__content">
+
+              <div class="information__item">
+                <div class="information__img">
+                  <img src="images/time-blue.png" alt="img">
+                </div>
+                <div class="information__text">
+                  Возможность выбора времени, продолжительности смены и  ставки для исполнителя!
+                </div>
+              </div>
+
+              <div class="information__item">
+                <div class="information__img">
+                  <img src="images/time-blue.png" alt="img">
+                </div>
+                <div class="information__text">
+                  25 профессий в гастрономии, ритейле, логистике и не только
+                </div>
+              </div>
+
+              <div class="information__item">
+                <div class="information__img">
+                  <img src="images/insurance.png" alt="img">
+                </div>
+                <div class="information__text">
+                  Страховка для работодателя и быстрая замена в случае неявки исполнителя
+                </div>
+              </div>
+
+              <div class="information__item">
+                <div class="information__img">
+                  <img src="images/interview.png" alt="img">
+                </div>
+                <div class="information__text">
+                  Система собеседования кандидатов
+                </div>
+              </div>
+
+              <div class="information__item">
+                <div class="information__img">
+                  <img src="images/class.png" alt="img">
+                </div>
+                <div class="information__text">
+                  Удобный и простой в использовании функционал
+                </div>
+              </div>
+
+              <div class="information__item">
+                <div class="information__img">
+                  <img src="images/lock.png" alt="img">
+                </div>
+                <div class="information__text">
+                  Блокировка недобросовестных заказчиков и исполнителей
+                </div>
+              </div>
+            </div>
+            <div class="information__images">
+              <img src="images/mobile.png" alt="img">
             </div>
           </div>
         </div>
