--- a/main.html
+++ b/main.html
@@ -415,7 +415,7 @@
           </div>
         </div>
       </div>
-      <div class="bg bg-about"></div>
+      <div class="bg bg-contract-rate"></div>
 
       <!-- About -->
       <div class="about">
@@ -842,6 +842,184 @@
           </div>
         </div>
       </div>
+
+      <div class="bg1 bg-video-training"></div>
+      <!-- Video-training -->
+      <div class="video-training">
+        <div class="container">
+          <div class="video-training__inner">
+            <h2 class="video-training__title title">
+              Видеообучение для исполнителей 
+            </h2>
+            <div class="video-training__items">
+
+              <div class="video-training__item">
+                <div class="video-training__images">
+                  <img src="images/waiter-img.png" alt="img">
+                </div>
+                <a href="#" class="video-training__label btn">
+                  Официант
+                </a>
+              </div>
+
+              <div class="video-training__item">
+                <div class="video-training__images">
+                  <img src="images/bartender-img.png" alt="img">
+                </div>
+                <a href="#" class="video-training__label btn">
+                  Бармен
+                </a>
+              </div>
+
+              <div class="video-training__item">
+                <div class="video-training__images">
+                  <img src="images/barista-img.png" alt="img">
+                </div>
+                <a href="#" class="video-training__label btn">
+                  Бариста
+                </a>
+              </div>
+
+              <div class="video-training__item">
+                <div class="video-training__images">
+                  <img src="images/loader-img.png" alt="img">
+                </div>
+                <a href="#" class="video-training__label btn">
+                  Грузчик
+                </a>
+              </div>
+
+              <div class="video-training__item">
+                <div class="video-training__images">
+                  <img src="images/merchandiser-img.png" alt="img">
+                </div>
+                <a href="#" class="video-training__label btn">
+                  Мерчендайзер
+                </a>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <div class="bg1 bg-estimates"></div>
+      <!-- Estimates -->
+      <div class="estimates">
+        <div class="container">
+          <div class="estimates__inner">
+            <div class="estimates__content">
+              <h2 class="estimates__title title">
+                Оценки - наше все
+              </h2>
+              <div class="estimates__subtitle">
+                Оценочная система работает в обе стороны. 
+              </div>
+              <div class="estimates__text pc">
+                Благодаря этому вы будете иметь представление о компании и возможность выделиться среди других кандидатов.
+              </div>
+            </div>
+            <div class="estimates__items">
+              <div class="estimates__images">
+                <img src="images/reward.png" alt="img">
+              </div>
+              <div class="estimates__text mobi">
+                Благодаря этому вы будете иметь представление о компании и возможность выделиться среди других кандидатов.
+              </div>
+            </div>
+            
+          </div>
+        </div>
+      </div>
+
+      <!-- To-learn-more -->
+      <div class="to-learn-more">
+        <div class="container">
+          <div class="to-learn-more__inner">
+            <h2 class="to-learn-more__title title">
+              Хотите узнать больше?
+            </h2>
+            <div class="to-learn-more__items">
+
+              <div class="to-learn-more__item">
+                <div class="to-learn-more__images">
+                  <img src="images/restaurant.jpg" alt="foto" class="pc">
+                  <img src="images/restaurant-mobi.jpg" alt="foto" class="mobi">
+                </div>
+                <a href="#" class="to-learn-more__button btn1 btn-green">
+                  для исполнителей
+                </a>
+              </div>
+
+              <div class="to-learn-more__item">
+                <div class="to-learn-more__images">
+                  <img src="images/office.jpg" alt="foto" class="pc">
+                  <img src="images/office-mobi.jpg" alt="foto" class="mobi">
+                </div>
+                <a href="#" class="to-learn-more__button btn1 btn-blue">
+                  для работодателя
+                </a>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <!-- Footer -->
+      <footer class="footer">
+        <div class="container">
+          <div class="footer__inner">
+
+            <div class="footer__description">
+              <a href="#" class="footer__logo mobi">
+                <div class="footer__logo-img">
+                  <img src="images/footer-logo.svg" alt="logo">
+                </div>
+                Jobscanner
+              </a>
+              <div class="footer__text">
+                У Вас возникли вопросы? <br>
+                <span>Напишите нам</span> 
+                <a href="#" class="footer__mail">INFO@WORKITO.RU</a>
+              </div>
+              <ul class="footer__media">
+                <li><a href="#" class="footer__media-link"><img src="images/vk.svg" alt="vk"></a></li>
+                <li><a href="#" class="footer__media-link"><img src="images/tel.svg" alt="vk"></a></li>
+              </ul>
+            </div>
+
+            <a href="#" class="footer__logo pc">
+              <div class="footer__logo-img">
+                <img src="images/footer-logo.svg" alt="logo">
+              </div>
+              Jobscanner
+            </a>
+
+            <ul class="footer__list">
+              <li><a href="#" class="footer__link">
+                Частые вопросы и ответы
+              </a></li>
+              <li><a href="#" class="footer__link">
+                Правила размещения вакансий
+              </a></li>
+              <li><a href="#" class="footer__link">
+                Правила хранения персональных данных
+              </a></li>
+              <li><a href="#" class="footer__link">
+                Защита персональных данных
+              </a></li>
+              <li><a href="#" class="footer__link">
+                Размещение рекламы на Workito
+              </a></li>
+              <li><a href="#" class="footer__link">
+                Цены
+              </a></li>
+            </ul>
+          </div>
+          <div class="footer__copy">
+            © 2022 ООО “Jobscanner” 
+          </div>
+        </div>
+      </footer>
     </div>
 
     <script src="./libs/jquery/jquery-3.2.1.min.js"></script>
