--- a/main.html
+++ b/main.html
@@ -194,7 +194,7 @@
       </div>
 
       <!-- Solutions -->
-      <div class="solutions solutions-pc">
+      <div class="solutions solutions-main solutions-pc">
         <div class="container">
           <div class="solutions__inner">
             <h2 class="solutions__title title">Трудные времена требуют простых решений!</h2>
@@ -669,7 +669,7 @@
       </div>
 
       <!-- Solutions-mobi -->
-      <div class="solutions solutions-mobi">
+      <div class="solutions solutions-main solutions-mobi">
         <div class="container">
           <div class="solutions__inner">
             <h2 class="solutions__title title">Трудные времена требуют простых решений!</h2>
@@ -776,8 +776,9 @@
       </div>
       
       <div class="bg1 bg-information"></div>
-      <!-- Information -->
-      <div class="information">
+
+      <!-- Information-main -->
+      <div class="information information-main">
         <div class="container">
           <div class="information__inner">
             <div class="information__content">
@@ -793,7 +794,7 @@
 
               <div class="information__item">
                 <div class="information__img">
-                  <img src="images/time-blue.png" alt="img">
+                  <img src="images/case.png" alt="img">
                 </div>
                 <div class="information__text">
                   25 профессий в гастрономии, ритейле, логистике и не только
