--- a/index.html
+++ b/index.html
@@ -11,8 +11,9 @@
 
 	<body>
 
-
+    <li><a href="block.html">block</a></li>
 		<li><a href="main.html">Main</a></li>
+		<li><a href="employer.html">Employer</a></li>
       
 		<script src="./libs/jquery/jquery-3.2.1.min.js"></script>
 		<script src="./libs/swiper/swiper.min.js"></script>
