--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
 		<li><a href="main.html">Main</a></li>
 		<li><a href="employer.html">Employer</a></li>
 		<li><a href="performers.html">Performers</a></li>
+		<li><a href="f&q.html">F&Q</a></li>
       
 		<script src="./libs/jquery/jquery-3.2.1.min.js"></script>
 		<script src="./libs/swiper/swiper.min.js"></script>
