--- a/index.html
+++ b/index.html
@@ -16,6 +16,11 @@
 		<li><a href="employer.html">Employer</a></li>
 		<li><a href="performers.html">Performers</a></li>
 		<li><a href="f&q.html">F&Q</a></li>
+		<li><a href="registration-employer1.html">Registration-employer1</a></li>
+		<li><a href="registration-employer2.html">Registration-employer2</a></li>
+		<li><a href="registration-employer3.html">Registration-employer3</a></li>
+		<li><a href="registration-employer4.html">Registration-employer4</a></li>
+		<li><a href="registration-employer5.html">Registration-employer5</a></li>
       
 		<script src="./libs/jquery/jquery-3.2.1.min.js"></script>
 		<script src="./libs/swiper/swiper.min.js"></script>
