--- a/index.html
+++ b/index.html
@@ -21,6 +21,10 @@
 		<li><a href="registration-employer3.html">Registration-employer3</a></li>
 		<li><a href="registration-employer4.html">Registration-employer4</a></li>
 		<li><a href="registration-employer5.html">Registration-employer5</a></li>
+		<li><a href="registration-employer6.html">Registration-employer6</a></li>
+		<li><a href="registration-employer7.html">Registration-employer7</a></li>
+		<li><a href="registration-employer8.html">Registration-employer8</a></li>
+		<li><a href="registration-employer9.html">Registration-employer9</a></li>
       
 		<script src="./libs/jquery/jquery-3.2.1.min.js"></script>
 		<script src="./libs/swiper/swiper.min.js"></script>
